Yeah, definitely forgot to commit

--- a/pages/01.md
+++ b/pages/01.md
@@ -4,13 +4,17 @@ class: text-center
 background: https://source.unsplash.com/collection/94734566/1920x1080
 ---
 
-# Presentation Title
+# Sistem Tangkap Gerak pada Media Kreatif Digital dengan Kamera RGB
 
-Welcome to this presentation!
+13518107 Chokyi Ozer
+<br/><br/>
+Dosen Pembimbing: Nugraha Priya Utama, S.T., MA., Ph.D.
+<br/>
+Dosen Penguji: Anggrahita Bayu Sasmita, M.T.
 
 <div class="abs-bl m-6 flex gap-2">
   <button @click="$slidev.nav.openInEditor()" title="Open in Editor" class="text-sm icon-btn opacity-50 !border-none !hover:text-white">
-    <carbon-information /> This slide deck can be accessed at xxx
+    <carbon-information /> Tayangan ini dapat diakses pada xxx
   </button>
 </div>
 
