--- a/pages/02.md
+++ b/pages/02.md
@@ -1,35 +1,35 @@
 ---
 layout: default
 ---
-# Bulleted Slide
+# Latar Belakang
 
-Slidev is a slides maker and presenter designed for developers, consist of the following features[^1]
+Dewasa ini, banyak bermunculan penggunaan pelacakan muka pada animasi muka waktu nyata *(realtime)*.
 
-- 📝 **Text-based** - focus on the content with Markdown, and then style them later
-- 🎨 **Themable** - theme can be shared and used with npm packages
-- 🧑‍💻 **Developer Friendly** - code highlighting, live coding with autocompletion
-- 🤹 **Interactive** - embedding Vue components to enhance your expressions
-- 🎥 **Recording** - built-in recording and camera view
-- 📤 **Portable** - export into PDF, PNGs, or even a hostable SPA
-- 🛠 **Hackable** - anything possible on a webpage
+<v-click>
 
-<br>
-<br>
+<div grid="~ cols-2 gap-4">
+<div>
 
-[^1]: [Foot Note](https://sli.dev/guide/syntax.html#line-highlighting)
+<img border="rounded" src="https://storage.googleapis.com/snapchat-lens-assets/f1a09194-f02d-43ed-92b8-62e843179ff0/lensStudio/SC/TXRcJ4Az_Guides/img/sc_guide_getting_started_select_lens.gif">
+
+Filter muka dari aplikasi Snap Camera.
+> Sumber: https://snapcamera.snapchat.com/guides/getting-started/
+
+</div>
+<div>
+<v-click>
+
+<img border="rounded" src="https://gamebrott.com/wp-content/uploads/2021/08/Vtuber-Kompilasi-750x375.jpg">
+
+Pelacakan gerak muka dipakai untuk penggerakan karakter virtual *"Vtuber"*.
+> Sumber: https://gamebrott.com/tersandung-ke-dalam-lubang-kelinci-vtuber-sebuah-esai
+
+</v-click>
+</div>
+</div>
+
+</v-click>
 
 <div class="abs-br m-8 flex gap-2 text-sm opacity-50">
   <SlideCurrentNo />
 </div>
-
-<style>
-.footnotes-sep {
-  @apply mt-20 opacity-10;
-}
-.footnotes {
-  @apply text-sm opacity-75;
-}
-.footnote-backref {
-  display: none;
-}
-</style>
