--- a/pages/03.md
+++ b/pages/03.md
@@ -1,19 +1,16 @@
 ---
 layout: default
 ---
+# Latar Belakang
 
-# Table Example
+Kenapa animasi muka waktu nyata semakin populer?
 
-Hover on the bottom-left corner to see the navigation's controls panel, [learn more](https://sli.dev/guide/navigation.html)
+<v-clicks>
 
-### Keyboard Shortcuts
+- 🛠 **Mudah Dipasang** - Dapat berjalan dengan modal kamera web atau kamera telepon cerdas.
+- 🤑 **Relatif Murah** - Banyak orang sudah memiliki telepon cerdas ataupun kamera web.
 
-|     |     |
-| --- | --- |
-| <kbd>right</kbd> / <kbd>space</kbd>| next animation or slide |
-| <kbd>left</kbd>  / <kbd>shift</kbd><kbd>space</kbd> | previous animation or slide |
-| <kbd>up</kbd> | previous slide |
-| <kbd>down</kbd> | next slide |
+</v-clicks>
 
 <div class="abs-br m-8 flex gap-2 text-sm opacity-50">
   <SlideCurrentNo />
