--- a/pages/04.md
+++ b/pages/04.md
@@ -1,25 +1,38 @@
 ---
-layout: image-right
-image: https://source.unsplash.com/collection/94734566/1920x1080
+layout: default
 ---
-# Code
+# Latar Belakang
 
-Use code snippets and get the highlighting directly!
+Dipakai juga pelacakan seluruh tubuh "tangkap gerak *(mocap)*" dalam pembuatan animasi.
 
-```ts #{all|2|1-6|9|all}
-interface User {
-  id: number
-  firstName: string
-  lastName: string
-  role: string
-}
+<div grid="~ cols-2 gap-4">
+<div>
+<v-click>
 
-function updateUser(id: number, update: User) {
-  const user = getUser(id)
-  const newUser = {...user, ...update}  
-  saveUser(id, newUser)
-}
-```
+<img border="rounded" src="https://i.ytimg.com/vi/MG4TPmZE024/maxresdefault.jpg">
+
+Gambaran penggunaan kostum tangkap gerak untuk pembuatan film laris *(blockbuster)* *Avengers*.
+> Sumber: https://www.youtube.com/watch?v=MG4TPmZE024
+
+</v-click>
+</div>
+<div>
+<v-click>
+
+<img border="rounded" src="https://i.ytimg.com/vi/e_d3msV33cc/maxresdefault.jpg">
+
+Penggunaan sistem tangkap gerak oleh studio animasi kecil Corridor Digital.
+> Sumber: https://www.youtube.com/watch?v=e_d3msV33cc
+
+</v-click>
+</div>
+</div>
+
+<v-click>
+
+Pelacakan seluruh tubuh juga dipakai dalam industri lain seperti militer dan otomotif.
+
+</v-click>
 
 <div class="abs-br m-8 flex gap-2 text-sm opacity-50">
   <SlideCurrentNo />
