--- a/pages/05.md
+++ b/pages/05.md
@@ -1,35 +1,17 @@
 ---
 layout: default
 ---
-# Components
+# Latar Belakang
 
-<div grid="~ cols-2 gap-4">
-<div>
+Kenapa animasi seluruh tubuh waktu nyata dipakai?
 
-You can use Vue components directly inside your slides.
+<v-clicks>
 
-We have provided a few built-in components like `<Tweet/>` and `<Youtube/>` that you can use directly. And adding your custom components is also super easy.
+- ⏩ **Hasil Cepat** - Animasi bukan hasil dari penggerakan rangka seperti animasi konvensional.
+- 💃 **Animasi Realistis** - Didasarkan gerakan nyata, berwujud gerakan nyata.
+- 🎥 **Penyutradaraan Ditempat** - Sutradara dapat langsung mengatur gerakan pemain.
 
-```html
-<Counter :count="10" />
-```
-
-<!-- ./components/Counter.vue -->
-<Counter :count="10" m="t-4" />
-
-Check out [the guides](https://sli.dev/builtin/components.html) for more.
-
-</div>
-<div>
-
-```html
-<Tweet id="1390115482657726468" />
-```
-
-<Tweet id="1390115482657726468" scale="0.65" />
-
-</div>
-</div>
+</v-clicks>
 
 <div class="abs-br m-8 flex gap-2 text-sm opacity-50">
   <SlideCurrentNo />
