--- a/pages/06.md
+++ b/pages/06.md
@@ -1,32 +1,16 @@
 ---
 layout: default
 ---
-# Themes
+# Latar Belakang
 
-Slidev comes with powerful theming support. Themes can provide styles, layouts, components, or even configurations for tools. Switching between themes by just **one edit** in your frontmatter:
+Kenapa animasi seluruh tubuh waktu nyata MASIH SEDIKIT dipakai?
 
-<div grid="~ cols-2 gap-2" m="-t-2">
+<v-clicks>
 
-```yaml
----
-theme: default
----
-```
+- 🏗 **Peralatan Rumit** - Tangkap gerak standar industri film memerlukan banyak pengaturan.
+- 💸 **Biaya Tinggi** - Sensor dan kostum untuk sistem tangkap gerak mahal.
 
-```yaml
----
-theme: seriph
----
-```
-
-<img border="rounded" src="https://github.com/slidevjs/themes/blob/main/screenshots/theme-default/01.png?raw=true">
-
-<img border="rounded" src="https://github.com/slidevjs/themes/blob/main/screenshots/theme-seriph/01.png?raw=true">
-
-</div>
-
-Read more about [How to use a theme](https://sli.dev/themes/use.html) and
-check out the [Awesome Themes Gallery](https://sli.dev/themes/gallery.html).
+</v-clicks>
 
 <div class="abs-br m-8 flex gap-2 text-sm opacity-50">
   <SlideCurrentNo />
