--- a/pages/07.md
+++ b/pages/07.md
@@ -1,7 +1,19 @@
 ---
-layout: center
-class: text-center
+layout: statement
 ---
-# Learn More
+### **Rumusan Masalah**
 
-[Documentations](https://sli.dev) · [GitHub](https://github.com/slidevjs/slidev) · [Showcases](https://sli.dev/showcases.html)
+<br/>
+
+## Bagaimana cara menghasilkan sebuah sistem tangkap gerak dengan hanya menggunakan peranti tambahan dua atau lebih kamera RGB?
+
+<br/>
+<br/>
+
+#
+
+*Tujuan: Membuat sebuah sistem tangkap gerak dengan batasan hanya menggunakan peranti tambahan berupa dua atau lebih kamera RGB.*
+
+<div class="abs-br m-8 flex gap-2 text-sm opacity-50">
+  <SlideCurrentNo />
+</div>
