Added github pages link

--- a/pages/01.md
+++ b/pages/01.md
@@ -13,9 +13,11 @@ Dosen Pembimbing: Nugraha Priya Utama, S.T., MA., Ph.D.
 Dosen Penguji: Anggrahita Bayu Sasmita, M.T.
 
 <div class="abs-bl m-6 flex gap-2">
-  <button @click="$slidev.nav.openInEditor()" title="Open in Editor" class="text-sm icon-btn opacity-50 !border-none !hover:text-white">
-    <carbon-information /> Tayangan ini dapat diakses pada xxx
+  <a href="https://ozer0532.github.io/ppt-ta-1/" style="border-width: 0">
+  <button class="text-sm icon-btn opacity-50 !border-none !hover:text-white">
+    <carbon-information /> Tayangan ini dapat diakses pada https://ozer0532.github.io/ppt-ta-1/
   </button>
+  </a>
 </div>
 
 <!--
