--- a/pages/15.md
+++ b/pages/15.md
@@ -4,4 +4,4 @@ class: text-center
 ---
 # Sekian
 
-Tayangan ini dapat diakses pada [xxx](https://sli.dev)
+Tayangan ini dapat diakses pada https://ozer0532.github.io/ppt-ta-1/
