--- a/pages/11.md
+++ b/pages/11.md
@@ -12,7 +12,7 @@ Estimasi pose manusia 2D yang dibantu oleh model pemelajaran mesin.
   - Mask R-CNN - Model segmentasi citra yang dapat dipakai untuk estimasi pose 2D.
   - Fast Pose Distillation (FPD) - Memanfaatkan jaringan "jam pasir".
 - Mengambil model dengan akurasi terbaik.
-- Melakukan pelatihan model di lingkungan lokal.
+- Melakukan eksperimentasi di lingkungan lokal.
 
 </v-clicks>
 
